<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="45dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ManagerMenuActivity">

        <TextView
            android:fontFamily="@font/playfair_display_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_manager"
            android:textColor="#673AB7"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="26dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputTglLaporan"
                android:layout_width="match_parent"
                android:enabled="false"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:fontFamily="@font/inter_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bulan_dan_tahun"
                    android:inputType="text"
                    android:enabled="false"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text=""
                    app:passwordToggleEnabled="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnTglLaporan"
                android:layout_marginStart="180dp"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pilih"
                android:backgroundTint="#03A9F4" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatButton
                    android:fontFamily="@font/inter_regular"
                    android:id="@+id/btnSewaMobil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cetak_laporan_penyewaan_mobil"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:background="#673AB7"
                    android:layout_marginBottom="33dp"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:fontFamily="@font/inter_regular"
                    android:id="@+id/btnDetailPendapatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cetak_laporan_detail_pendapatan"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:background="#673AB7"
                    android:layout_marginBottom="33dp"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:fontFamily="@font/inter_regular"
                    android:id="@+id/btn5Driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cetak_laporan_top_5_driver_transaksi_terbanyak"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:background="#673AB7"
                    android:layout_marginBottom="33dp"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:fontFamily="@font/inter_regular"
                    android:id="@+id/btn5CustomerTransaksi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cetak_laporan_top_5_customer_transaksi_terbanyak"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:background="#673AB7"
                    android:layout_marginBottom="33dp"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:fontFamily="@font/inter_regular"
                    android:id="@+id/btnPerformaDrv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cetak_laporan_performa_driver"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:background="#673AB7"
                    android:layout_marginBottom="33dp"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:fontFamily="@font/inter_regular"
                    android:id="@+id/btnLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keluar"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:background="#E91E63"
                    android:layout_marginBottom="33dp"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</layout>