<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="data"
            type="com.example.p3l_ajr_0171.entity.Driver" />
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".drivermenu.UpdateDriverActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:fontFamily="@font/inter_regular"
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kembali"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="#E91E63"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"/>

        <TextView
            android:fontFamily="@font/playfair_display_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_data_driver"
            android:textColor="#673AB7"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="26dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:fontFamily="@font/inter_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nama"
                        android:inputType="text"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text="@={data.namaDrv}"
                        app:passwordToggleEnabled="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputAlamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:fontFamily="@font/inter_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alamat"
                        android:inputType="text"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text="@={data.alamatDrv}"
                        app:passwordToggleEnabled="true"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputNoTelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:fontFamily="@font/inter_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/no_telp"
                        android:inputType="text"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text="@={data.noTelpDrv}"
                        app:passwordToggleEnabled="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputTglLahir"
                        android:layout_width="match_parent"
                        android:enabled="false"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:fontFamily="@font/inter_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tanggal_lahir"
                        android:inputType="text"
                        android:enabled="false"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text="@={data.tglLahirDrvStr}"
                        app:passwordToggleEnabled="true"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnTglLahir"
                        android:layout_marginStart="180dp"
                        android:layout_marginTop="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/pilih"
                        android:backgroundTint="#03A9F4" />

                </RelativeLayout>

                <Spinner
                    android:id="@+id/spinnerKelamin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="38dp"
                    android:spinnerMode="dropdown" />
                <Spinner
                    android:id="@+id/spinnerBahasaAsing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="38dp"
                    android:spinnerMode="dropdown" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputTarif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:fontFamily="@font/inter_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tarif"
                        android:inputType="text"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text="@={data.tarifDrvStr}"
                        app:passwordToggleEnabled="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:fontFamily="@font/inter_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="text"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text="@={data.passwordDrv}"
                        app:passwordToggleEnabled="true"/>

                </com.google.android.material.textfield.TextInputLayout>



                <androidx.appcompat.widget.AppCompatButton
                    android:fontFamily="@font/inter_regular"
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ubah_data"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:background="#673AB7"
                    android:layout_marginBottom="33dp"
                    android:textColor="@color/white"/>

            </LinearLayout>


        </ScrollView>

    </LinearLayout>
</layout>