<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.p3l_ajr_0171.entity.Mobil" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@{data.namaMbl}"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="8"
                android:layout_marginStart="7dp"
                android:rowOrderPreserved="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/tipe"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvTipeMbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:fontFamily="@font/inter_regular"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:text="@{data.tipeMbl}"
                    android:hint="@string/tipe"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jenis_transmisi"
                    android:fontFamily="@font/inter_regular"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="2dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvJenisTransmisi"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/black"
                    android:text="@{data.jenisTransmisi}"
                    android:hint="@string/jenis_transmisi"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/bahan_bakar"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="2dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvBahanBakar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/black"
                    android:text="@{data.jenisBahanBakar}"
                    android:hint="@string/bahan_bakar"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/warna"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="2dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvWarna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/black"
                    android:text="@{data.warna}"
                    android:hint="@string/warna"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/plat_nomor"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="2dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvPlat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/black"
                    android:text="@{data.platNomor}"
                    android:hint="@string/plat_nomor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/fasilitas"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="2dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvFasilitas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/black"
                    android:text="@{data.fasilitas}"
                    android:hint="@string/fasilitas"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/harga_sewa"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="2dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvHargaSewa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginBottom="2dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/black"
                    android:text="@{data.hargaSewaStr}"
                    android:hint="@string/harga_sewa"/>

                <ImageView
                    android:id="@+id/tvGambar"
                    android:layout_rowWeight="2"
                    android:layout_columnWeight="2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/image"/>

            </GridLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>